--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,12 @@
 [submodule "submodules/Nimble"]
 	path = submodules/Nimble
-	url = git@github.com:drmohundro/Nimble.git
+	url = git@github.com:AshFurrow/Nimble.git
 [submodule "submodules/Quick"]
 	path = submodules/Quick
 	url = git@github.com:tokorom/Quick.git
+[submodule "Bootstrap/submodules/ios-snapshot-test-case"]
+	path = Bootstrap/submodules/ios-snapshot-test-case
+	url = git@github.com:facebook/ios-snapshot-test-case.git
+[submodule "submodules/ios-snapshot-test-case"]
+	path = submodules/ios-snapshot-test-case
+	url = git@github.com:facebook/ios-snapshot-test-case.git
