--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "submodules/Nimble"]
 	path = submodules/Nimble
-	url = git@github.com:AshFurrow/Nimble.git
+	url = git@github.com:Quick/Nimble.git
 [submodule "submodules/Quick"]
 	path = submodules/Quick
-	url = git@github.com:tokorom/Quick.git
+	url = git@github.com:Quick/Quick.git
 [submodule "Bootstrap/submodules/ios-snapshot-test-case"]
 	path = Bootstrap/submodules/ios-snapshot-test-case
 	url = git@github.com:facebook/ios-snapshot-test-case.git
