--- a/Bootstrap/Gemfile
+++ b/Bootstrap/Gemfile
@@ -1,6 +1,4 @@
 source 'https://rubygems.org'
 
-gem 'cocoapods', :git => 'https://github.com/CocoaPods/CocoaPods.git', :branch => 'swift'
-gem 'cocoapods-core', :git => 'https://github.com/CocoaPods/Core.git', :branch => 'swift'
-gem 'xcodeproj',  :git => "https://github.com/CocoaPods/Xcodeproj.git", :branch => 'ext_build_settings'
+gem 'cocoapods', '0.36.0.beta.1'
 
