--- a/Bootstrap/Podfile
+++ b/Bootstrap/Podfile
@@ -4,9 +4,9 @@ pod 'Artsy+UIColors'
 
 target 'BootstrapTests' do
 
-  pod 'FBSnapshotTestCase', :git => "https://github.com/ashfurrow/ios-snapshot-test-case.git"
-  pod 'Quick', :git => "https://github.com/orta/Quick", :branch => "podspec"
-  pod 'Nimble', :git => "https://github.com/ashfurrow/Nimble", :branch => "podspec"
+  pod 'FBSnapshotTestCase'
+  pod 'Quick'
+  pod 'Nimble'
   pod 'Nimble-Snapshots', :path => "../"
 
 end
