--- a/Bootstrap/Podfile
+++ b/Bootstrap/Podfile
@@ -1,3 +1,5 @@
+source 'https://github.com/CocoaPods/Specs.git'
+source 'https://github.com/artsy/Specs.git'
 
 # Need one pod
 pod 'Artsy+UIColors'
