--- a/Bootstrap/Podfile
+++ b/Bootstrap/Podfile
@@ -7,6 +7,7 @@ use_frameworks!
 pod 'Artsy+UIColors'
 
 target 'BootstrapTests' do
+  pod 'FBSnapshotTestCase', :git => "https://github.com/esttorhe/ios-snapshot-test-case"
   pod 'Nimble-Snapshots', :path => "../"
 end
 
