--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,7 @@
-osx_image: xcode7
+osx_image: xcode7.1
 language: objective-c
 before_script:
   - cd Bootstrap ; bundle install ; cd ..
   - cd Bootstrap ; bundle exec pod install ; cd ..
   - export LANG=en_US.UTF-8
-  - gem i cocoapods --no-ri --no-rdoc
-  - brew update
-  - brew uninstall xctool
-  - brew install xctool
-xcode_workspace: Bootstrap/Bootstrap.xcworkspace
-xcode_scheme: Bootstrap
-xcode_sdk: iphonesimulator
+script: set -o pipefail && xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination "name=iPad Air,OS=9.1" clean build test | xcpretty --color --simple
