--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ osx_image: xcode7.3
 language: objective-c
 before_script:
   - cd Bootstrap ; bundle install ; cd ..
-  - cd Bootstrap ; bundle exec pod install ; cd ..
+  - cd Bootstrap ; bundle exec pod install --repo-update ; cd ..
   - export LANG=en_US.UTF-8
 script: set -o pipefail && xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination "name=iPhone 6,OS=9.3" clean build test | xcpretty --color --simple
