--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 
 Bootstrap/Bootstrap.xcodeproj/xcuserdata/
 Bootstrap/Bootstrap.xcworkspace/xcuserdata/
+
+# Carthage
+Carthage/Checkouts
+Carthage/Build
