--- a/Bootstrap/Podfile
+++ b/Bootstrap/Podfile
@@ -8,6 +8,6 @@ target 'BootstrapTests' do
   pod 'Quick', git: 'https://github.com/Quick/Quick.git'
   pod 'Nimble', git: 'https://github.com/Quick/Nimble.git'
 
-  pod 'Nimble-Snapshots', :path => "../"
+  pod 'Nimble-Snapshots/DynamicType', :path => "../"
 end
 
