--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: objective-c
-
-matrix:
-  include:
-    - osx_image: xcode7.3
-    - osx_image: xcode8
+osx_image: xcode8
 
 before_script:
   - cd Bootstrap ; bundle install ; cd ..
