Adding Demo project for Swift 3

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 
 Bootstrap/Bootstrap.xcodeproj/xcuserdata/
 Bootstrap/Bootstrap.xcworkspace/xcuserdata/
+BootstrapSwift3/BootstrapSwift3.xcodeproj/xcuserdata/
+BootstrapSwift3/BootstrapSwift3.xcworkspace/xcuserdata/
+BootstrapSwift3/BootstrapSwift3.xcodeproj/project.xcworkspace/xcuserdata
