Adding support for many sizes tests

--- a/BootstrapSwift3/Podfile
+++ b/BootstrapSwift3/Podfile
@@ -9,5 +9,6 @@ target 'BootstrapSwift3Tests' do
   pod 'FBSnapshotTestCase', git: 'https://github.com/facebook/ios-snapshot-test-case.git'
 
   pod 'Nimble-Snapshots/DynamicType', :path => "../"
+  pod 'Nimble-Snapshots/DynamicSize', :path => "../"
 end
 
