Set a specific device on the `.travis.yml` file
Travis is thowing “The requested device could not be found because multiple devices matched the request.”, looks like it has 2 options for the iOS 10.2 version, so you have to specify one.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_script:
   - export LANG=en_US.UTF-8
 script:
   - set -o pipefail
-  - xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination "name=iPhone 7,OS=10.2" clean build test | xcpretty --color --simple
-  - xcodebuild -workspace 'BootstrapSwift3/BootstrapSwift3.xcworkspace' -sdk 'iphonesimulator' -scheme 'BootstrapSwift3' -destination "name=iPhone 7,OS=10.2" clean build test | xcpretty --color --simple
+  - xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination "id=E40727B3-41FB-4D6E-B4CB-BFA87109EB12" clean build test | xcpretty --color --simple
+  - xcodebuild -workspace 'BootstrapSwift3/BootstrapSwift3.xcworkspace' -sdk 'iphonesimulator' -scheme 'BootstrapSwift3' -destination "id=E40727B3-41FB-4D6E-B4CB-BFA87109EB12" clean build test | xcpretty --color --simple
