--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ osx_image: xcode8.2
 
 before_script:
   - bundle install
-  - cd Bootstrap ; bundle exec pod install --repo-update ; cd ..
-  - cd BootstrapSwift3 ; bundle exec pod install ; cd ..
+  - cd BootstrapSwift3 ; bundle exec pod install --repo-update ; cd ..
   - export LANG=en_US.UTF-8
 script:
   - set -o pipefail
-  - xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination "id=E40727B3-41FB-4D6E-B4CB-BFA87109EB12" clean build test | xcpretty --color --simple
   - xcodebuild -workspace 'BootstrapSwift3/BootstrapSwift3.xcworkspace' -sdk 'iphonesimulator' -scheme 'BootstrapSwift3' -destination "id=E40727B3-41FB-4D6E-B4CB-BFA87109EB12" clean build test | xcpretty --color --simple
