--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_script:
   - export LANG=en_US.UTF-8
 script:
   - set -o pipefail
-  - xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination "name=iPhone 6,OS=9.3" -destination "name=iPhone 6,OS=10.2" clean build test | xcpretty --color --simple
+  - xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination "name=iPhone 6,OS=9.3" -destination "platform=iOS Simulator,id=1FD54EA7-5A25-4D6F-8599-D6F7687DA4EE,OS=10.2" clean build test | xcpretty --color --simple
