--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ before_script:
   - cd Bootstrap ; bundle exec pod install --repo-update ; cd ..
   - export LANG=en_US.UTF-8
 script:
-  - set -o pipefail
-  - xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination "name=iPhone 6,OS=9.3" -destination "platform=iOS Simulator,id=1FD54EA7-5A25-4D6F-8599-D6F7687DA4EE,OS=10.2" clean build test | xcpretty --color --simple
+  - rake test
+  - rake pod_lint
