--- a/Bootstrap/Podfile
+++ b/Bootstrap/Podfile
@@ -4,8 +4,8 @@ use_frameworks!
 pod 'Forgeries'
 
 target 'BootstrapTests' do
-  pod 'Quick', '~> 1.1.0'
-  pod 'Nimble', '~> 6.1.0'
+  pod 'Quick'
+  pod 'Nimble'
   pod 'FBSnapshotTestCase', git: 'https://github.com/facebook/ios-snapshot-test-case.git'
 
   pod 'Nimble-Snapshots/DynamicType', :path => "../"
