Include all subspecs by default
This also enables using them with Carthage.

Fixes #89, #90

--- a/Bootstrap/Podfile
+++ b/Bootstrap/Podfile
@@ -8,6 +8,5 @@ target 'BootstrapTests' do
   pod 'Nimble'
   pod 'FBSnapshotTestCase', git: 'https://github.com/facebook/ios-snapshot-test-case.git'
 
-  pod 'Nimble-Snapshots/DynamicType', :path => "../"
-  pod 'Nimble-Snapshots/DynamicSize', :path => "../"
+  pod 'Nimble-Snapshots', :path => "../"
 end
