--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,9 @@ osx_image: xcode8.3
 
 before_script:
   - bundle install
-  - cd Bootstrap ; bundle exec pod install --repo-update ; cd ..
+  - cd Bootstrap ; bundle exec pod install ; cd ..
   - export LANG=en_US.UTF-8
-  - brew uninstall swiftlint ; (brew update && brew install swiftlint)
 script:
-  - rake swiftlint
   - rake test
   - rake pod_lint
   - rake carthage
