--- a/Bootstrap/Podfile
+++ b/Bootstrap/Podfile
@@ -4,8 +4,8 @@ use_frameworks!
 pod 'Forgeries'
 
 target 'BootstrapTests' do
-  pod 'Quick'
-  pod 'Nimble'
+  pod 'Quick', git: 'https://github.com/Quick/Quick.git'
+  pod 'Nimble', git: 'https://github.com/Quick/Nimble.git'
   pod 'FBSnapshotTestCase', git: 'https://github.com/facebook/ios-snapshot-test-case.git'
 
   pod 'Nimble-Snapshots', :path => "../"
