--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,8 @@ machine:
     LANG: en_US.UTF-8
 
 dependencies:
+  pre:
+    - curl -sS https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash
   override:
     - bundle install
     - cd Bootstrap ; bundle exec pod install ; cd ..
