--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,63 +36,43 @@ jobs:
       - *bunde_install
       - *restore_bundle_cache
       - run:
+          name: "Run Danger"
+          command: bundle exec danger
+      - run:
           name: "Create output dir"
           command: mkdir output
       - run:
           name: "Run tests in Swift 4.0"
-          command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.0 build test | tee output/xcodebuild_swift$SWIFT_VERSION.log | xcpretty --color --simple
+          command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.0 build test | tee output/xcodebuild_swift4.0.log | xcpretty --color --simple
       - run: 
           name: second curtain
           command: bundle exec second_curtain output/xcodebuild_swift4.0.log
           when: on_fail
       - run:
           name: "Run tests in Swift 4.2"
-          command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.2 build test | tee output/xcodebuild_swift$SWIFT_VERSION.log | xcpretty --color --simple
+          command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.2 build test | tee output/xcodebuild_swift4.2.log | xcpretty --color --simple
       - run: 
           name: second curtain
           command: bundle exec second_curtain output/xcodebuild_swift4.2.log
           when: on_fail
-      - store_artifacts:
-          path: output/
-      - store_test_results:
-          path: output/
-    
-  carthage-integration-test:
-    <<: *defaults
-    steps:
-      - checkout
       - run:
           name: "Run Carthage integration test"
           command: carthage bootstrap --platform iOS && xcodebuild | xcpretty --color --simple
-
-  swiftlint:
-    <<: *defaults
-    docker:
-      - image: dantoml/swiftlint:latest
-    steps:
-      - checkout
-      - run: swiftlint lint --no-cache --reporter junit | tee result.xml
+      - run:
+          name: "Swiftlint"
+          command: |
+               brew install swiftlint
+               swiftlint lint --no-cache --reporter junit | tee result.xml
       - store_artifacts:
           path: result.xml
+      - store_artifacts:
+          path: output/
       - store_test_results:
           path: result.xml
-   
-  danger:
-    <<: *defaults
-    steps:
-      - checkout
-      - *restore_bundle_cache
-      - *bunde_install
-      - *restore_bundle_cache
-      - run:
-          name: "Run Danger"
-          command: bundle exec danger
-  
+          path: output/
+      
 workflows:
   version: 2
   build-and-test:
     jobs:
       - tests
-      - carthage-integration-test
-      - danger
-      - swiftlint
