--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
       - checkout
       - *restore_bundle_cache
       - *bunde_install
-      - *restore_bundle_cache
+      - *save_bundle_cache
       - run:
           name: "Run Danger"
           command: bundle exec danger
@@ -43,18 +43,10 @@ jobs:
           command: mkdir output
       - run:
           name: "Run tests in Swift 4.0"
-          command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.0 build test | tee output/xcodebuild_swift4.0.log | xcpretty --color --simple
-      - run: 
-          name: second curtain
-          command: bundle exec second_curtain output/xcodebuild_swift4.0.log
-          when: on_fail
+          command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.0 build test | bundle exec second_curtain | tee output/xcodebuild_swift4.0.log | xcpretty --color --simple
       - run:
           name: "Run tests in Swift 4.2"
-          command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.2 build test | tee output/xcodebuild_swift4.2.log | xcpretty --color --simple
-      - run: 
-          name: second curtain
-          command: bundle exec second_curtain output/xcodebuild_swift4.2.log
-          when: on_fail
+          command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.2 build test | bundle exec second_curtain | tee output/xcodebuild_swift4.2.log | xcpretty --color --simple
       - run:
           name: "Run Carthage integration test"
           command: carthage bootstrap --platform iOS && xcodebuild | xcpretty --color --simple
