Store the failed tests directory in the artifacts
• Set the `IMAGE_DIFF_DIR` ENV variable in the Bootstrap project for the failed tests directory
• Store the failed tests directory in the artifacts

Fail tests intentionally

Back

--- a/Bootstrap/Bootstrap.xcodeproj/xcshareddata/xcschemes/Bootstrap.xcscheme
+++ b/Bootstrap/Bootstrap.xcodeproj/xcshareddata/xcschemes/Bootstrap.xcscheme
@@ -71,6 +71,13 @@
             ReferencedContainer = "container:Bootstrap.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "IMAGE_DIFF_DIR"
+            value = "$(SOURCE_ROOT)/$(PROJECT_NAME)Tests/FailureDiffs"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
