--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ references:
         macos:
             xcode: "10.0.0"
         shell: /bin/bash --login -eo pipefail
-        working_directory: /Users/distiller/project
+        working_directory: ~/Nimble-Snapshots
         environment:
             BUNDLE_PATH: vendor/bundle
             
@@ -27,7 +27,6 @@ references:
 
 version: 2
 jobs:
-
   tests:
     <<: *defaults
     steps:
@@ -40,7 +39,7 @@ jobs:
           command: bundle exec danger
       - run:
           name: "Create output dir"
-          command: mkdir output
+          command: mkdir output      
       - run:
           name: "Run tests in Swift 4.0"
           command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.0 build test | bundle exec second_curtain | tee output/xcodebuild_swift4.0.log | xcpretty --color --simple
@@ -59,6 +58,8 @@ jobs:
           path: result.xml
       - store_artifacts:
           path: output/
+      - store_artifacts:
+          path: ~/Nimble-Snapshots/Bootstrap/BootstrapTests/FailureDiffs/
       - store_test_results:
           path: result.xml
           path: output/
