--- a/Bootstrap/Podfile
+++ b/Bootstrap/Podfile
@@ -6,7 +6,7 @@ pod 'Forgeries'
 target 'BootstrapTests' do
   pod 'Quick'
   pod 'Nimble'
-  pod 'iOSSnapshotTestCase'
+  pod 'iOSSnapshotTestCase', '~> 5.0'
 
   pod 'Nimble-Snapshots', :path => "../"
 end
