--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
       - run:
           name: "Swiftlint"
           command: |
-               brew install swiftlint
+               HOMEBREW_NO_AUTO_UPDATE=1 brew install swiftlint
                swiftlint lint --no-cache --reporter junit | tee result.xml
       - store_artifacts:
           path: result.xml
