--- a/Bootstrap/BootstrapTests/.swiftlint.yml
+++ b/Bootstrap/BootstrapTests/.swiftlint.yml
@@ -1,19 +1,20 @@
 opt_in_rules:
-  - empty_count
-  - force_unwrapping
   - closure_end_indentation
   - closure_spacing
   - conditional_returns_on_newline
+  - empty_count
   - explicit_init
   - first_where
+  - force_unwrapping
   - operator_usage_whitespace
   - overridden_super_call
   - prohibited_super_call
+  - redundant_nil_coalescing
   - sorted_imports
   - switch_case_on_newline
-  - redundant_nil_coalescing
 
 disabled_rules:
-  function_body_length
+  - function_body_length
+  - implicitly_unwrapped_optional
 
 line_length: 200
