Set `ENABLE_TESTING_SEARCH_PATHS` to `YES` for Xcode 11.4.0 compatibility
This search path now has to be explicitly set

--- a/Nimble_Snapshots/Nimble_Snapshots.xcconfig
+++ b/Nimble_Snapshots/Nimble_Snapshots.xcconfig
@@ -10,3 +10,5 @@ IPHONEOS_DEPLOYMENT_TARGET = 8.0
 TVOS_DEPLOYMENT_TARGET = 9.0
 
 TARGETED_DEVICE_FAMILY = 1, 2, 3
+
+ENABLE_TESTING_SEARCH_PATHS = YES
