--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
           command: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=5.0 build test | tee output/xcodebuild_swift5.0.log | xcpretty --color --simple
       - run:
           name: "Run Carthage integration test"
-          command: carthage bootstrap --platform iOS && xcodebuild | xcpretty --color --simple
+          command: sh carthage-xcode-12.sh bootstrap --platform iOS && xcodebuild | xcpretty --color --simple
       - run:
           name: "Swiftlint"
           command: |
