--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1.2.3
         with:
-          xcode-version: 12
+          xcode-version: 12.0
 
       - name: Set up Ruby 2.6
         uses: ruby/setup-ruby@v1.66.0
@@ -20,8 +20,15 @@ jobs:
           ruby-version: 2.6
           bundler-cache: true
 
-      - name: Run Danger
-        run: bundle exec danger
+      - name: Danger action
+        uses: MeilCli/danger-action@v5.0.1
+        with:
+          plugins_file: 'Gemfile'
+          install_path: 'vendor/bundle'
+          danger_file: 'Dangerfile'
+          danger_id: 'danger-pr'
+        env:
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Run tests in Swift 4.2
         run: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.2 build test | tee output/xcodebuild_swift4.2.log | xcpretty --color --simple
