--- a/Nimble_Snapshots/Nimble_Snapshots.xcconfig
+++ b/Nimble_Snapshots/Nimble_Snapshots.xcconfig
@@ -2,8 +2,8 @@ SDKROOT[sdk=iphone*] = iphoneos
 SDKROOT[sdk=appletv*] = appletvos
 SUPPORTED_PLATFORMS = appletvsimulator appletvos iphonesimulator iphoneos
 
-FRAMEWORK_SEARCH_PATHS[sdk=iphone*] = $(PROJECT_DIR)/Carthage/Build $(inherited) $(PLATFORM_DIR)/Developer/Library/Frameworks
-FRAMEWORK_SEARCH_PATHS[sdk=appletv*] = $(PROJECT_DIR)/Carthage/Build $(inherited) $(PLATFORM_DIR)/Developer/Library/Frameworks
+FRAMEWORK_SEARCH_PATHS[sdk=iphone*] = $(PROJECT_DIR)/Carthage/Build/iOS $(inherited) $(PLATFORM_DIR)/Developer/Library/Frameworks
+FRAMEWORK_SEARCH_PATHS[sdk=appletv*] = $(PROJECT_DIR)/Carthage/Build/tvOS $(inherited) $(PLATFORM_DIR)/Developer/Library/Frameworks
 
 IPHONEOS_DEPLOYMENT_TARGET = 10.0
 TVOS_DEPLOYMENT_TARGET = 10.0
