--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 jobs:
   test:
     name: Build and Test Nimble-Snapshots
-    runs-on: macOS-11
+    runs-on: macOS-12
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2.3.4
@@ -12,7 +12,7 @@ jobs:
       - name: Setup Xcode version
         uses: maxim-lobanov/setup-xcode@v1.4.0
         with:
-          xcode-version: 13.0
+          xcode-version: 14.0
 
       - name: Set up Ruby 2.7.2
         uses: ruby/setup-ruby@v1.84.0
@@ -34,10 +34,7 @@ jobs:
       - name: "Create output dir"
         run: mkdir output
       
-      - name: Run tests in Swift 4.2
-        run: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=4.2 build test | tee output/xcodebuild_swift4.2.log
-
-      - name: Run tests in Swift 5.0
+      - name: Run tests in Swift 5.X
         run: xcodebuild -workspace 'Bootstrap/Bootstrap.xcworkspace' -sdk 'iphonesimulator' -scheme 'Bootstrap' -destination 'name=iPhone 8' SWIFT_VERSION=5.0 build test | tee output/xcodebuild_swift5.0.log
 
       - name: Run Carthage integration test
