--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,9 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: 14.3.1
+        
+    - name: Bundle install
+      run: bundle install
       
     - name: Lint
       run: |
@@ -19,4 +22,4 @@ jobs:
             swiftlint
       
     - name: Build iOS
-      run: make build-ios
+      run: bundle exec rake build:package:iOS
