--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,4 +22,4 @@ jobs:
             swiftlint
       
     - name: Build iOS
-      run: bundle exec rake build:package:iOS
+      run: bundle exec rake build:package:all
