chore(ci): upload FailureDiffs only on failure

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -51,6 +51,7 @@ jobs:
             output
 
       - name: Store FailureDiffs artifacts
+        if: failure()
         uses: actions/upload-artifact@v6
         with:
           name: FailureDiffs
