--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -57,11 +57,11 @@ jobs:
 
       - name: Danger action
         uses: MeilCli/danger-action@v6
-        if: github.event_name == 'pull_request'
+        if: always() && github.event_name == 'pull_request'
         with:
           plugins_file: 'Gemfile'
           install_path: 'vendor/bundle'
           danger_file: 'Dangerfile'
           danger_id: 'danger-pr'
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
